<resources>
    <string name="app_name">Gestor de Tiendas</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>



    <!-- Navigation -->
    <string name="home">Inicio</string>
    <string name="products">Productos</string>
    <string name="sales">Ventas</string>
    <string name="reports">Reportes</string>
    <string name="profile">Perfil</string>
    <string name="employees">Empleados</string>
    <string name="notifications">Notificaciones</string>

    <!-- Content descriptions -->
    <string name="store_logo">Logo de la tienda</string>

    <!-- Home screen -->
    <string name="quick_access">Accesos Rápidos</string>
    <string name="today_sales">Ventas Hoy</string>
    <string name="product_count">Productos</string>
    <string name="manage_inventory">Gestionar inventario</string>
    <string name="register_sale">Registrar venta</string>
    <string name="manage_staff">Gestionar personal</string>
    <string name="view_statistics">Ver estadísticas</string>

    <!-- Welcome messages -->
    <string name="welcome_message">¡Hola! Bienvenido</string>
    <string name="store_open">● Abierta</string>
    <string name="store_closed">● Cerrada</string>

    <!-- Common -->
    <string name="loading">Cargando…</string>
    <string name="error">Error</string>
    <string name="success">Éxito</string>
    <string name="cancel">Cancelar</string>
    <string name="accept">Aceptar</string>
    <string name="save">Guardar</string>
    <string name="delete">Eliminar</string>
    <string name="edit">Editar</string>

    <!-- Auth -->
    <string name="login">Iniciar Sesión</string>
    <string name="register">Registrarse</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="name">Nombre</string>
    <string name="phone">Teléfono</string>
    <string name="document">Documento</string>

    <!-- Product -->

    <string name="product_create">Crear Producto</string>
    <string name="product_name">Nombre del producto</string>
    <string name="product_description">Descripción del producto</string>
    <string name="product_price">Precio del producto</string>
    <string name="product_ref">Referencia del Producto</string>
    <string name="product_stock">Stock del producto</string>
    <string name="product_category">Categoría del producto</string>
    <string name="product_brand">Marca del producto</string>
    <string name="product_weight">Peso del producto</string>
    <string name="product_supplier">Proveedor</string>
    <string name="supplier_contact">Contacto del proveedor</string>


    <!-- Strings used for fragments for authentication -->

    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>"
    <string name="nombre_completo">Nombre completo</string>
    <string name="correo_electronico">Correo Electrónico</string>
    <string name="numero_telefono">Número de Teléfono</string>
    <string name="numero_documento">Número de Documento</string>
    <string name="contrasena">Contraseña</string>
    <string name="confirmar_contrasena">Confirmar Contraseña</string>
    <string name="registrar_cuenta">Registrar cuenta</string>
    <string name="ya_tengo_cuenta">Ya tengo una cuenta. Iniciar Sesión</string>
    <string name="no_tengo_cuenta">No tengo una cuenta. Registrarse</string>
    <string name="volver_atras">Volver atrás</string>

    <!-- OnBoarding Strings -->
    <string name="onboarding_title_0">Bienvenido</string>
    <string name="onboarding_desc_0">Administra tu tienda fácilmente.</string>

    <string name="onboarding_title_1">Gestión total</string>
    <string name="onboarding_desc_1">Control de ventas, productos y empleados.</string>

    <string name="onboarding_title_2">Reportes visuales</string>
    <string name="onboarding_desc_2">Gráficas automáticas para tus decisiones.</string>

    <string name="onboarding_title_3">¡Comienza ahora!</string>
    <string name="onboarding_desc_3">Crea una cuenta o inicia sesión.</string>



    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>